tinyc/test/bad/enum-redeclaration-local.c
int main()
{
    enum {
        x = 10,
    };
    enum {
        x = 10,
    };

    return 0;
}
